# fake_data_generator

./: .gitignore  README.md  data_schema.py  execute.py  gcp_etl.py  pyproject.toml
bigquery/: bq_client.py  bqml.py
cloud_function/data_generator/: .gcloudignore  deploy.sh  main.py  pubsub.py  requirements.txt
cloud_function/data_generator/data_schema/: social_media.py
cloud_function/data_generator/gcp/: consumer.py  producer.py
cloud_function/data_generator/gcp/utils/: gcs_stream_upload.py
cloud_function/upload_to_gcs/: deploy.sh  main.py  requirements.txt
data_generator/: execute.py
data_schema/: social_media.py
dataflow/: PubSubToGCS.py  deploy.sh  streaming_message.py  wordcount.py  wordcount_debug.py  wordcount_minimal.py
gcp/: consumer.py  producer.py
gcp/utils/: gcs_stream_upload.py
scripts/: deploy_gcp_service.sh
