[tool.poetry]
name = "fake_data_generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^5.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
