[tool.poetry]
name = "fake_data_generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Faker = "^5.0.1"
google-cloud-pubsub = "^2.2.0"
google-cloud-storage = "^1.35.1"
google-resumable-media = "^1.2.0"
fastavro = "^1.3.1"
google-cloud-bigquery = "^2.13.1"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
